; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_play_direction.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_play_direction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m_property = type { i32 }
%struct.TYPE_5__ = type { i32 }

@M_PROPERTY_SET = common dso_local global i32 0, align 4
@MPSEEK_ABSOLUTE = common dso_local global i32 0, align 4
@MPSEEK_EXACT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.m_property*, i32, i8*)* @mp_property_play_direction to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mp_property_play_direction(i8* %0, %struct.m_property* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.m_property*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_5__*, align 8
  store i8* %0, i8** %5, align 8
  store %struct.m_property* %1, %struct.m_property** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %11, %struct.TYPE_5__** %9, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* @M_PROPERTY_SET, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %31

15:                                               ; preds = %4
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %8, align 8
  %20 = bitcast i8* %19 to i32*
  %21 = load i32, i32* %20, align 4
  %22 = icmp ne i32 %18, %21
  br i1 %22, label %23, label %30

23:                                               ; preds = %15
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %25 = load i32, i32* @MPSEEK_ABSOLUTE, align 4
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %27 = call i32 @get_current_time(%struct.TYPE_5__* %26)
  %28 = load i32, i32* @MPSEEK_EXACT, align 4
  %29 = call i32 @queue_seek(%struct.TYPE_5__* %24, i32 %25, i32 %27, i32 %28, i32 0)
  br label %30

30:                                               ; preds = %23, %15
  br label %31

31:                                               ; preds = %30, %4
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %33 = load %struct.m_property*, %struct.m_property** %6, align 8
  %34 = load i32, i32* %7, align 4
  %35 = load i8*, i8** %8, align 8
  %36 = call i32 @mp_property_generic_option(%struct.TYPE_5__* %32, %struct.m_property* %33, i32 %34, i8* %35)
  ret i32 %36
}

declare dso_local i32 @queue_seek(%struct.TYPE_5__*, i32, i32, i32, i32) #1

declare dso_local i32 @get_current_time(%struct.TYPE_5__*) #1

declare dso_local i32 @mp_property_generic_option(%struct.TYPE_5__*, %struct.m_property*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
